LeadManagementProject/force-app/main/default/objects/Country__c/fields/Alpha3Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha3Code__c</fullName>
    <description>ISO Country code - 3 letters</description>
    <label>Alpha3Code</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>