LeadManagementProject/force-app/main/default/objects/Country__c/fields/RegionalBlocs__c.field-meta.xml
<CustomField>
    <fullName>RegionalBlocs__c</fullName>
    <description>Regional blocks in which the country is a member</description>
    <label>RegionalBlocs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SAARC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>