LeadManagementProject/force-app/main/default/objects/Country__c/fields/RegionalBlocsList__c.field-meta.xml
<CustomField>
    <fullName>RegionalBlocsList__c</fullName>
    <description>Multipicklist field for regional blocs</description>
    <label>RegionalBlocsList</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTO</fullName>
            </value>
            <value>
                <fullName>AMEA</fullName>
            </value>
            <value>
                <fullName>AMER</fullName>
            </value>
            <value>
                <fullName>AMS</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>ANZIT</fullName>
            </value>
            <value>
                <fullName>ANZUK</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>APEC</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
            </value>
            <value>
                <fullName>APMA</fullName>
            </value>
            <value>
                <fullName>APSG</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>ASEAN</fullName>
            </value>
            <value>
                <fullName>AUKUS</fullName>
            </value>
            <value>
                <fullName>BASIC</fullName>
            </value>
            <value>
                <fullName>Benelux</fullName>
            </value>
            <value>
                <fullName>BIMSTEC</fullName>
            </value>
            <value>
                <fullName>BRIC</fullName>
            </value>
            <value>
                <fullName>BRICS</fullName>
            </value>
            <value>
                <fullName>BSEC</fullName>
            </value>
            <value>
                <fullName>CALA</fullName>
            </value>
            <value>
                <fullName>CAME</fullName>
            </value>
            <value>
                <fullName>CANZUK</fullName>
            </value>
            <value>
                <fullName>CARICOM</fullName>
            </value>
            <value>
                <fullName>CARIFTA</fullName>
            </value>
            <value>
                <fullName>CEFTA</fullName>
            </value>
            <value>
                <fullName>CELAC</fullName>
            </value>
            <value>
                <fullName>CEN-SAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>